feat: #80 Implemented account validation in the desktop application
